fixes bug where footer overlaps content.

--- a/css/style.css
+++ b/css/style.css
@@ -95,9 +95,9 @@ sl-tab::part(base){
   font-size: 20px;
 }
 
-sl-tab-panel{
+/* sl-tab-panel{
   margin-bottom: 80px;
-}
+} */
 h2 {
   text-align: center;
 }
@@ -233,7 +233,7 @@ textarea {
   display: flex;
   justify-content: center;
   align-items: center;
-  position: absolute;
+  position: relative;
   margin-top: 10px;
   bottom: 0%;
   width: 100%;
